# fanya

./: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/2021-11-05-211452_create_tasks/: down.sql  up.sql
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  schema.rs
