[package]
name = "fanya"
version = "0.1.0"
description = "Manage your //TODOs"
authors = ["Noah Too"]
license = "MIT"
repository = "https://github.com/krivahtoo/fanya"
default-run = "fanya"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
dotenv = "0.15.0"
toml = "0.5.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["cli", "window-all"] }
diesel = { version = "1.4.8", features = ["sqlite", "chrono"] }
chrono = { version = "0.4.38", features = ["serde"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
